crates/solidity-v2/testing/snapshots/cst_output/ErrorDefinition/top_level/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.4'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/ErrorDefinition/top_level/input.sol:2:1]
   │
 2 │ error MyError();
   │ ────────┬───────  
   │         ╰───────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            ErrorDefinition(
                ErrorDefinitionStruct {
                    error_keyword: ErrorKeyword {
                        range: 100..105,
                    },
                    name: Identifier {
                        range: 106..113,
                    },
                    members: ErrorParametersDeclarationStruct {
                        open_paren: OpenParen {
                            range: 113..114,
                        },
                        parameters: ErrorParameters {
                            elements: [],
                        },
                        close_paren: CloseParen {
                            range: 114..115,
                        },
                    },
                    semicolon: Semicolon {
                        range: 115..116,
                    },
                },
            ),
        ],
    },
}
